// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner /> renders correctly with size: Sized Spinner 1`] = `
<DocumentFragment>
  <div
    class="chakra-spinner css-10026hq"
    data-testid="spinner"
  >
    <span
      class="css-8b45rq"
    >
      Loading...
    </span>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Spinner /> renders correctly: Default Spinner 1`] = `
<DocumentFragment>
  <div
    class="chakra-spinner css-933fgd"
    data-testid="spinner"
  >
    <span
      class="css-8b45rq"
    >
      Loading...
    </span>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
